--- a/res/layout/item.xml
+++ b/res/layout/item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <fr.marvinlabs.widget.CheckableRelativeLayout 
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:marvinlabs="http://schemas.android.com/apk/res/fr.marvinlabs.selectablelisttutorial"
+	android:id="@+id/layout" 
 	android:layout_width="fill_parent" 
 	android:layout_height="fill_parent"
 	android:layout_marginRight="10dp"
@@ -14,7 +14,7 @@
 		android:layout_alignParentLeft="true" 
 		android:layout_centerVertical="true" 
 		android:layout_marginLeft="5dp"
-		android:textSize="18dp" 
+		android:textSize="18sp" 
 		android:textStyle="bold|italic"
 		android:textColor="#fccc" 
 		android:focusable="false" />
@@ -24,7 +24,7 @@
 		android:layout_height="fill_parent"
 		android:layout_toRightOf="@id/itemId" 
 		android:layout_centerVertical="true" 
-		android:textSize="13dp"
+		android:textSize="13sp"
 		android:textColor="#feee" 
 		android:focusable="false" />	
 
